knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Account_Plan_Score_History__c/pqcrush__pq_Account_Plan_Score_History__c.object-meta.xml
<CustomObject>
    <label>Account Plan Score History</label>
    <nameField>
        <displayFormat>APSH-{0000}</displayFormat>
        <label>Account Plan Score History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Score Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>