knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Account_Plan_Score_History__c/fields/pqcrush__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Score Histories</relationshipLabel>
    <relationshipName>Account_Plan_Score_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>