knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Account_Plan_Score_History__c/fields/pqcrush__Score__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>