knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Account_Plan_Score_History__c/fields/pqcrush__Year_Week__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Year_Week__c</fullName>
    <description>Year week in the form of YYYYWW, example 202305 (fifth week of 2023)</description>
    <label>Year Week</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>